--- a/app/src/main/res/layout/fragment_cuurent_user_rate.xml
+++ b/app/src/main/res/layout/fragment_cuurent_user_rate.xml
@@ -5,13 +5,30 @@
     tools:context=".Fragments.CurrentUserRateFragment"
     android:id="@+id/Table">
 
-    <!-- TODO: Update blank fragment layout -->
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayoutRate"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_user_rate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Rate"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal|top" />
+    <com.github.rahatarmanahmed.cpv.CircularProgressView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/progress_view_user_rate"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:cpv_animAutostart="true"
+        app:cpv_indeterminate="true"
+        app:cpv_color="@color/colorPrimaryDark"
+        android:layout_gravity="center" />
+
 </FrameLayout>
