Update team players

--- a/app/src/main/res/layout/home_team_player_row.xml
+++ b/app/src/main/res/layout/home_team_player_row.xml
@@ -1,69 +1,110 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="88dp"
-    android:paddingTop="10dp"
+    android:orientation="horizontal"
     android:paddingBottom="10dp"
     android:paddingLeft="@dimen/margin_16dp"
     android:paddingRight="@dimen/margin_16dp"
-    android:orientation="horizontal">
+    android:paddingTop="10dp">
 
-   <ImageView
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       android:layout_centerVertical="true"
-       android:src="@drawable/ic_account_circle_black_36dp"
-       android:id="@+id/imageView2" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_account_circle_black_36dp" />
 
     <TextView
         android:id="@+id/textView7Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
         android:layout_marginLeft="72dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
+        android:text="Name"
         android:textColor="#000"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textViewYear"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Year"
-        android:textSize="14sp"
-        android:layout_below="@+id/textView7Name"
-        android:layout_alignLeft="@+id/textView7Name"
-        android:layout_alignStart="@+id/textView7Name" />
+        android:layout_below="@+id/textView7Name">
 
-    <TextView
-        android:id="@+id/textViewNationality"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textYear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:text="Birthday: "
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textViewNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:text="number"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textViewYear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/textYear"
+                android:layout_toRightOf="@+id/textYear"
+                android:text="year"
+                android:textSize="14sp" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="Nationality"
-        android:layout_below="@+id/textView7Name"
-        android:layout_toRightOf="@+id/textView7Name"
-        android:layout_toEndOf="@+id/textView7Name" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/linearLayout"
+        android:layout_marginLeft="72dp">
 
-    <TextView
-        android:id="@+id/textViewNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="number"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_alignLeft="@+id/textViewYear"
-        android:layout_alignStart="@+id/textViewYear" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textNationality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nationality: "
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textViewNationality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/textNationality"
+                android:layout_toRightOf="@+id/textNationality"
+                android:maxLength="11"
+                android:text="nationality"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textViewPosition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:maxLength="11"
+                android:text="position"
+                android:textSize="14sp" />
 
 
-
-    <TextView
-        android:id="@+id/textViewPosition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Position"
-        android:textSize="14sp"
-        android:layout_alignTop="@+id/textViewNumber"
-        android:layout_alignRight="@+id/textViewNationality"
-        android:layout_alignEnd="@+id/textViewNationality" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
