--- a/app/src/main/res/layout/fragment_rate.xml
+++ b/app/src/main/res/layout/fragment_rate.xml
@@ -21,6 +21,14 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageViewBackArrow"
+                android:src="@drawable/ic_arrow_back_white_24dp"
+                android:paddingTop="16dp"
+                android:paddingLeft="16dp" />
+
             <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageHomeTeam"
                 android:layout_width="70dp"
