--- a/app/src/main/res/layout/fragment_all_users.xml
+++ b/app/src/main/res/layout/fragment_all_users.xml
@@ -5,9 +5,12 @@
     android:background="@color/white"
     tools:context="info.androidhive.firebase.Fragments.AllUsersFragment">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
-        android:backgroundTint="@color/colorPrimaryDark"
+    <com.tuesda.walker.circlerefresh.CircleRefreshLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:AniBackColor="@color/colorPrimary"
+        app:AniForeColor="#ffffffff"
+        app:CircleSmaller="6"
+        android:id="@+id/refresh_layout_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
@@ -19,7 +22,7 @@
         android:layout_marginLeft="0dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </com.tuesda.walker.circlerefresh.CircleRefreshLayout>
 
     <com.github.rahatarmanahmed.cpv.CircularProgressView
         xmlns:app="http://schemas.android.com/apk/res-auto"
