--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,7 @@
         app:tabGravity="fill"
         app:tabMode="fixed" />
 
-    <info.androidhive.firebase.Classes.CustomViewPager
+    <info.androidhive.firebase.Classes.Utils.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
