--- a/app/src/main/res/layout/fragment_rate.xml
+++ b/app/src/main/res/layout/fragment_rate.xml
@@ -169,7 +169,7 @@
             app:tabGravity="fill"
             app:tabMode="fixed" />
 
-        <info.androidhive.firebase.Classes.CustomViewPager
+        <info.androidhive.firebase.Classes.Utils.CustomViewPager
             android:id="@+id/viewpager_rate"
             android:layout_below="@+id/tabs_match_rate"
             android:layout_width="match_parent"
