--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:orientation="vertical"
-    android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="8dp">
+    android:layout_height="wrap_content">
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
+
+
+
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:orientation="vertical"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp"
+            android:gravity="center_horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/firstteam"
@@ -49,23 +63,15 @@
         android:layout_alignParentRight="true"
   />
 
-    <TextView
-        android:id="@+id/goalsHomeTeam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="goalsHomeTeam"
-        android:textColor="@color/title"
-        android:layout_alignBottom="@+id/firstteam"
-        android:layout_alignLeft="@+id/homeTeam"
-        android:layout_alignStart="@+id/homeTeam" />
-
-    <TextView
+            <TextView
         android:id="@+id/goalsAwayTeam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/title"
         android:text="goalsAwayTeam"
-        android:layout_alignBottom="@+id/firstteam"
-        android:layout_toLeftOf="@+id/secondteam"
-        android:layout_toStartOf="@+id/secondteam" />
+                android:layout_alignBottom="@+id/firstteam"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
