--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976d2</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#c1c1c1</color>
 
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
