--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
             android:background="@null"
             android:text="@string/btn_forgot_password"
             android:textAllCaps="false"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/white" />
 
         <!-- Link to Login Screen -->
 
@@ -107,14 +107,6 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp" />
 
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/signinGoogle"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="@string/googleloginText"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="0dp" />
         </LinearLayout>
 
 
