--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -11,67 +11,96 @@
 
 
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:orientation="vertical"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp"
-            android:gravity="center_horizontal">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/firstteam"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/prof"
-        android:layout_centerVertical="true"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/secondteam"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/prof"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-    <TextView
-        android:id="@+id/homeTeam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/title"
-        android:text="homeTeam"
-        android:layout_marginTop="15dp"
-   android:layout_marginLeft="72dp"
-        android:maxLength="10" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="8dp">
 
-    <TextView
-        android:id="@+id/awayTeam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/title"
-        android:text="awayTeam"
-        android:layout_marginRight="72dp"
-        android:maxLength="10"
-        android:layout_marginTop="15dp"
-        android:layout_alignParentRight="true"
-  />
+        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/firstteam"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/prof" />
 
-            <TextView
-        android:id="@+id/goalsAwayTeam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/title"
-        android:text="goalsAwayTeam"
-                android:layout_alignBottom="@+id/firstteam"
-                android:layout_centerHorizontal="true" />
-        </RelativeLayout>
+        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/secondteam"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/prof" />
+
+        <TextView
+            android:id="@+id/homeTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/awayTeam"
+            android:layout_alignBottom="@+id/awayTeam"
+            android:layout_toEndOf="@+id/firstteam"
+            android:layout_toRightOf="@+id/firstteam"
+            android:maxLength="10"
+            android:text="ht"
+            android:textColor="@color/title"
+            android:paddingLeft="10dp" />
+
+        <TextView
+            android:id="@+id/awayTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/secondteam"
+            android:layout_marginBottom="14dp"
+            android:layout_toLeftOf="@+id/secondteam"
+            android:layout_toStartOf="@+id/secondteam"
+            android:maxLength="10"
+            android:text="at"
+            android:textColor="@color/title"
+            android:paddingRight="10dp" />
+
+        <TextView
+            android:id="@+id/goalsAwayTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/awayTeam"
+            android:layout_centerHorizontal="true"
+            android:text="time"
+            android:textColor="@color/title" />
+
+        <TextView
+            android:id="@+id/textViewScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/homeTeam"
+            android:layout_centerHorizontal="true"
+            android:maxLength="10"
+            android:text=" - "
+            android:textColor="@color/title" />
+
+        <TextView
+            android:id="@+id/textViewStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:maxLength="10"
+            android:text="status"
+            android:textColor="@color/title" />
+    </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
